# ssg-poster-library

./: README.md
docs/: index.html  search.json
gh-pages/: README.md  index.qmd
showcase-2024-10-31/: README.md  _quarto.yml  index.qmd  pyproject.toml  showcase-2024-10-31.qmd
typst-templates/poster-vcu/_extensions/poster-vcu/: _extension.yml
typst-templates/poster-vcu/poster-vcu/: README.md  sample1.qmd
website/: _quarto.yml  index.qmd
