[tool.poetry]
name = "showcase-2024-10-31"
version = "0.1.0"
description = ""
authors = ["John Leonard <jdleonard@vcu.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
